--- a/config.toml
+++ b/config.toml
@@ -1,1 +1,11 @@
-# No options for now.
+[params]
+    [params.gallerydeluxe]
+        # Shuffle the images in the gallery to give the impression of a new gallery each time.
+        shuffle = false
+
+        # Reverse the order of the images in the gallery.
+        # reverse = false
+
+         # Enable Exif data in the gallery.
+         # See https://gohugo.io/content-management/image-processing/#exif-data for how to filter tags.
+        enable_exif = false
