--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL      = "https://www.example.com/"
+baseURL      = "https://patrickaxe.github.io/ACAYP22"
 title        = "Gallery Deluxe"
 disableKinds = ["section", "taxonomy", "term"]
 
@@ -15,7 +15,7 @@ disableKinds = ["section", "taxonomy", "term"]
 
         # Enable Exif data in the gallery.
         # See https://gohugo.io/content-management/image-processing/#exif-data for how to filter tags.
-        enable_exif = true
+        enable_exif = false
 
 [caches]
     [caches.images]
